# AquaDet

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-edge.txt
ai_core/: __init__.py
ai_core/inference/: __init__.py  pipeline.py  tracker.py
ai_core/models/: __init__.py  bifpn.py  depth_head.py  hybrid_backbone.py  hybrid_model.py  multi_task_head.py  pi_ge.py
ai_core/training/: ema.py  losses.py  metrics.py  train_baseline.py  train_hybrid.py
ai_core/utils/: __init__.py  geometry.py  types.py
artifacts/: hybrid_model_best-2.pt
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
configs/: class_map.yaml  dataset_baseline.yaml  hybrid_train.yaml  hybrid_train_kaggle.yaml  inference.yaml
docs/: AquaDet_Final.docx  AquaDet_Formal.docx  documentation.docx  project_description.md  research_paper_en.md  system_design_ru.md
edge/: Dockerfile
edge/deploy/: tensorrt_notes.md
edge/export/: export_onnx.py
edge/runtime/: run_edge_inference.py
iot/esp32/: protocol.md
iot/mock/: publish_mock_telemetry.py
scripts/: check_dataset_quality.py  eval_inference_sanity.py  kaggle_train.py  prepare_hybrid_dataset.py  run_inference_demo.py
tests/: conftest.py  test_api.py  test_geometry.py  test_model.py  test_pipeline.py  test_tracker.py
